# autonomous-systems

./: README.md
carla_simulation/: carla_simulation.py  data_collection.py
common/models/: cnn.py
common/utils/: data_utils.py  train.py
mujoco_simulation/: CMakeLists.txt  mujoco_controller.cpp  mujoco_simulation.py
scripts/: run_carla.sh  run_mujoco.sh  setup_enviroment.sh
